# Dining-Philosophers

./: .gitignore  CMakeLists.txt  README.md
C/: CMakeLists.txt  Makefile
C++ with lockguard/: CMakeLists.txt  main.cpp  philosopher.cpp  philosopher.h
C++ with mutexes/: subject.md
C++_mutex/: main.cpp  philosopher.cpp  philosopher.h
C/headers/: init_data_utils.h  main.h  printer.h  printer_utils.h  threads.h  threads_utils.h  time_utils.h  types.h
C/srcs/: actions.c  init_data.c  main.c  printer.c  threads.c  time_utils.c
includes/: input.h  main.h  types.h  utils.h
philo/: Makefile
philo/headers/: actions.h  error_and_free.h  import_input.h  init_data.h  init_data_utils.h  main.h  print_philo_status.h  printer.h  printer_utils.h  run_simulation.h  run_simulation_utils.h  terminate_program.h  threads.h  threads_utils.h  time_utils.h  types.h  utils.h
philo/srcs/: actions.c  error_and_free.c  import_input.c  init_data.c  init_data_utils.c  main.c  print_philo_status.c  printer.c  printer_utils.c  run_simulation.c  run_simulation_utils.c  terminate_program.c  threads.c  threads_utils.c  time_utils.c  utils.c
srcs/: input.c  main.c  utils.c
